Actualización de CSS
Cambio de estilo para botón regresar

--- a/Ejercicio_14.html
+++ b/Ejercicio_14.html
@@ -18,12 +18,6 @@
     <div class="_8_">Border</div>
     <div class="_9_">Height</div>
     <div class="_10_">Padding</div>
-
-    
-
-</body>
-<body>
-    <br>
-    <a href="/index.html" class="back">Regresar</a><br><br>
+    <div class="regresar"><a href="/index.html">Regresar a página</a></div>
 </body>
 </html>
