Actualización de boton
Se actualiza la funcióón regresar a pagina principal del sitio general

--- a/Ejercicio_2.html
+++ b/Ejercicio_2.html
@@ -52,5 +52,9 @@
         </ul>
     </section>
 </section>   
+
+<br>
+<a href="/index.html" class="back">Regresar a página principal</a><br><br>
+
 </body>
 </html>
