--- a/Ejercicio_4.html
+++ b/Ejercicio_4.html
@@ -40,5 +40,9 @@
 <li>Elemento 2</li>
 <li>Elemento 3</li>
 </ol>
+
+<br>
+<a href="/index.html" class="back">Regresar a página principal</a><br><br>
+
 </body>
 </html>
