--- a/Ejercicio_3.html
+++ b/Ejercicio_3.html
@@ -15,6 +15,10 @@
 <li><a href="deportes.html">Deportes</a></li>
 <li><a href="servicios.html">Servicios</a></li>
 </ul>
+
+<br>
+<a href="/index.html" class="back">Regresar a página principal</a><br><br>
+
 </body>
 </html>
 
