--- a/Ejercicio_5.html
+++ b/Ejercicio_5.html
@@ -30,5 +30,9 @@
             </li>
         </ul>
     </nav>
+
+    <br>
+<a href="/index.html" class="back">Regresar a página principal</a><br><br>
+
 </body>
 </html>
