--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="ancho">
             <div class="boton">
-                <button onclick="window.location.href='/html/pages/compras.html'">Carrito de compras</button>
+                <button onclick="window.location.href='/html/pages/Compras.html'">Carrito de compras</button>
                 <button onclick="window.location.href='/html/pages/Login.html'">Login</button>
             </div> 
             <nav>
