Actualización de master
Se actuaizan estilos y cantidad de ejercicios

--- a/index.html
+++ b/index.html
@@ -9,26 +9,45 @@
 </head>
 <body>
 
-    <h1>Desarrollo de software</h1>
-
+    <div class="animación">
+        <p>Carrera <br><span>Full Satck</span></p>
+    </div>
+<div class="elementos">
     <nav>
-        <li><a href="/Ejercicio_1.html">Ejercicio 1</a></li>
-        <li><a href="/Ejercicio_2.html">Ejercicio 2</a></li>
-        <li><a href="/Ejercicio_3.html">Ejercicio 3</a></li>
-        <li><a href="/Ejercicio_4.html">Ejercicio 4</a></li>
-        <li><a href="/Ejercicio_5.html">Ejercicio 5</a></li>
-        <li><a href="/Ejercicio_6.html">Ejercicio 6</a></li>
-        <li><a href="/Ejercicio_7.html">Ejercicio 7</a></li>
-        <li><a href="/Ejercicio_8.html">Ejercicio 8</a></li>
-        <li><a href="/Ejercicio_9.html">Ejercicio 9</a></li>
-        <li><a href="/Ejercicio_10.html">Ejercicio 10</a></li>
-        <li><a href="/Ejercicio_11.html">Ejercicio 11</a></li>
-        <li><a href="/Ejercicio_12.html">Ejercicio 12</a></li>
-        <li><a href="/Ejercicio_13.html">Ejercicio 13</a></li>
-        <li><a href="/Ejercicio_14.html">Ejercicio 14</a></li>
+        <h1>Ejercicios: </h1>
+        <li><a href="/Ejercicio_1.html">Ejercicio 01: Maquetación General</a></li>
+        <li><a href="/Ejercicio_2.html">Ejercicio 02: Diseños Maquetaciones</a></li>
+        <li><a href="/Ejercicio_3.html">Ejercicio 03: Selectores</a></li>
+        <li><a href="/Ejercicio_4.html">Ejercicio 04: Listas Elementos</a></li>
+        <li><a href="/Ejercicio_5.html">Ejercicio 05: Listas Sombreados</a></li>
+        <li><a href="/Ejercicio_6.html">Ejercicio 06: Modelos Cajas 1</a></li>
+        <li><a href="/Ejercicio_7.html">Ejercicio 07: Modelos Cajas 2</a></li>
+        <li><a href="/Ejercicio_8.html">Ejercicio 08: Selectores 1</a></li>
+        <li><a href="/Ejercicio_9.html">Ejercicio 09: Maquetación Formularios</a></li>
+        <li><a href="/Ejercicio_10.html">Ejercicio 10: Selectores 2</a></li>
+        <li><a href="/Ejercicio_11.html">Ejercicio 11: Selectores Avanzados 1</a></li>
+        <li><a href="/Ejercicio_12.html">Ejercicio 12: Selectores Avanzados 2</a></li>
+        <li><a href="/Ejercicio_13.html">Ejercicio 13: Imagenes</a></li>
+        <li><a href="/Ejercicio_14.html">Ejercicio 14: Tranciciones 1</a></li>
+        <li><a href="/Ejercicio_15.html">Ejercicio 15: Tranciciones 2</a></li>
+        <li><a href="/Ejercicio_16.html">Ejercicio 16: Pokeball</a></li>
+        <li><a href="/Ejercicio_17.html">Ejercicio 17: Sistema Solar</a></li>
+        <li><a href="/Ejercicio_18.html">Ejercicio 18: Animaciones</a></li>
+        <li><a href="/Ejercicio_19.html">Ejercicio 19: Reflejo</a></li>
+        <li><a href="/Ejercicio_20.html">Ejercicio 20: Tienda de dispositivos eléctricos</a></li>
         <br>
-        <li><a href="/html/index.html">Proyecto de ropa</a></li>
+        <li><a href="/html/index.html">Tienda de ropa (Proyecto)</a></li>
     </nav>
-    <!-- <footer style="text-align: center;">Copyright © Todos los derechos reservados - Desarrollado por Jhonatan Galiano - 2023</footer> -->
+    <br>
+</div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<div>
+    <footer style="text-align: center;">Copyright © Todos los derechos reservados - Desarrollado por Jhonatan Galiano - 2023</footer>
+</div>
+    
 </body>
 </html>
