Actualización de botón back
Se actuliza le diseño de la función regresar a pagina principal de los ejercicios 1-14

--- a/Ejercicio_1.html
+++ b/Ejercicio_1.html
@@ -48,13 +48,11 @@ El contenido de este libro se estructura en tres apartados bien diferenciados:
 <li>En la tercera y última parte se explica <span class="texto_cursiva">CSS</span>, el lenguaje que se emplea para definir el formato y la presentación de una página web. Se explica cómo utilizar el color, cómo definir la presentación del texto, de las tablas y de los formularios; cómo realizar transformaciones y transiciones con el fin de diseñar una página web.</li>
 </ul>
 
-<br>
-<a href="/index.html" class="back">Regresar a página principal</a><br><br>
-
-
 </body>
 
 <body>
-    
+    <div class="regresar">
+        <a href="/index.html" class="back">Regresar a página principal</a>
+    </div>    
 </body>
 </html>
