--- a/Ejercicio_4.html
+++ b/Ejercicio_4.html
@@ -42,7 +42,10 @@
 </ol>
 
 <br>
-<a href="/index.html" class="back">Regresar a página principal</a><br><br>
+<div class="regresar">
+    <a href="/index.html" class="back">Regresar a página principal</a>
+</div>
+
 
 </body>
 </html>
