--- a/Ejercicio_5.html
+++ b/Ejercicio_5.html
@@ -32,7 +32,10 @@
     </nav>
 
     <br>
-<a href="/index.html" class="back">Regresar a página principal</a><br><br>
+    <div class="regresar">
+        <a href="/index.html" class="back">Regresar a página principal</a>
+    </div>
+    
 
 </body>
 </html>
