--- a/Ejercicio_8.html
+++ b/Ejercicio_8.html
@@ -41,17 +41,16 @@ span{
   font-weight: bold;
 }
 
-.back{
-    text-decoration: none;
-    color: white;
-    background-color: rgb(17, 92, 110);
-    border-radius: 15%;
-    height: 150px;
-    width: 450px;
-    font-size: 25px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;}
-    .back:hover{
-        text-decoration: underline;
+.regresar{
+    margin-top: 750px;
+    text-align: center;
+    font-size: 25px;}
+    .back{
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        text-decoration: none;
+        color: black;}
+        .back:hover{
+            text-decoration: underline;
 }
 
 </style>
@@ -81,7 +80,9 @@ Este libro es <em>adecuado para cualquiera que tenga interés en aprender a desa
 
 
 
-<a href="/index.html" class="back">Regresar a página principal</a><br><br>
+<div class="regresar">
+  <a href="/index.html" class="back">Regresar a página principal</a>
+</div>
 
 </body>
 </html>
