--- a/Ejercicio_12.html
+++ b/Ejercicio_12.html
@@ -45,7 +45,9 @@
 </table>
 
 <br>
-<a href="/index.html" class="back">Regresar a página principal</a><br><br>
+<div class="regresar">
+  <a href="/index.html" class="back">Regresar a página principal</a>
+</div>
 
 </body>
 </html>
