--- a/Ejercicio_13.html
+++ b/Ejercicio_13.html
@@ -32,7 +32,9 @@
     <hr>
 
     <br>
-    <a href="/index.html" class="back">Regresar a página principal</a><br><br>
+    <div class="regresar">
+        <a href="/index.html" class="back">Regresar a página principal</a>
+    </div>
 
   </body>
   </html>
