--- a/Ejercicio_2.html
+++ b/Ejercicio_2.html
@@ -54,7 +54,9 @@
 </section>   
 
 <br>
-<a href="/index.html" class="back">Regresar a página principal</a><br><br>
+<div class="regresar">
+    <a href="/index.html" class="back">Regresar a página principal</a>
+</div>
 
 </body>
 </html>
