--- a/Ejercicio_3.html
+++ b/Ejercicio_3.html
@@ -17,7 +17,9 @@
 </ul>
 
 <br>
-<a href="/index.html" class="back">Regresar a página principal</a><br><br>
+<div class="regresar">
+    <a href="/index.html" class="back">Regresar a página principal</a>
+</div>
 
 </body>
 </html>
