--- a/Ejercicio_7.html
+++ b/Ejercicio_7.html
@@ -49,7 +49,9 @@ El contenido de este libro se estructura en tres apartados bien diferenciados:
 </ul>
 
 <br>
-<a href="/index.html" class="back">Regresar a página principal</a><br><br>
+<div class="regresar">
+    <a href="/index.html" class="back">Regresar a página principal</a>
+</div>
 
 </body>
 </html>
