--- a/Ejercicio_9.html
+++ b/Ejercicio_9.html
@@ -68,7 +68,9 @@
     </form>
 
     <br>
-    <a href="/index.html" class="back">Regresar a página principal</a><br><br>
+    <div class="regresar">
+        <a href="/index.html" class="back">Regresar a página principal</a>
+    </div>
 
 </body>
 </html>
