Ejercicios JS y HTML

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
 <div class="elementos">
     <nav>
-        <h1>Ejercicios: </h1>
+        <h1>Ejercicios HTML y CSS: </h1>
         <li><a href="/Ejercicio_1.html">Ejercicio 01: Maquetación General</a></li>
         <li><a href="/Ejercicio_2.html">Ejercicio 02: Diseños Maquetaciones</a></li>
         <li><a href="/Ejercicio_3.html">Ejercicio 03: Selectores</a></li>
@@ -49,7 +49,29 @@
         <li><a href="/Ejercicio_20.html">Ejercicio 20: Tienda de dispositivos eléctricos</a></li>
         <br>
         <li><a href="/html/index.html">Tienda de ropa (Proyecto)</a></li>
+        <br>
+        <h1>Ejercicios JS y HTML: </h1>
+        <li><a href="/JS_Ejercicios/Ejercicio_1.html">Ejercicio 01: Estructura condicional sencilla "if else" 1</a></li>
+        <li><a href="/JS_Ejercicios/Ejercicio_2.html">Ejercicio 02: Estructura condicional sencilla "if else" 2</a></li>
+        <li><a href="/JS_Ejercicios/Ejercicio_3.html">Ejercicio 03: Estructura condicional sencilla "if else" 3</a></li>
+        <li><a href="/JS_Ejercicios/Ejercicio_4.html">Ejercicio 04: Estructura condicional sencilla "if else" 4</a></li>
+        <li><a href="/JS_Ejercicios/Ejercicio_5.html">Ejercicio 05: Estructura condicional sencilla "if else" 5</a></li>
+        <li><a href="/JS_Ejercicios/Ejercicio_6.html">Ejercicio 06: Estructura condicional sencilla "if else" 6</a></li>
+        <li><a href="/JS_Ejercicios/Ejercicio_7.html">Ejercicio 07: Estructura condicional "else if" 1</a></li>
+        <li><a href="/JS_Ejercicios/Ejercicio_8.html">Ejercicio 08: Estructura condicional "else if" 2</a></li>
+        <li><a href="/JS_Ejercicios/Ejercicio_9.html">Ejercicio 09: Estructura condicional "if...else, else if y operador ternario" 1</a></li>
+        <li><a href="/JS_Ejercicios/Ejercicio_10.html">Ejercicio 10: Estructura condicional "if...else, else if y operador ternario" 2</a></li>
+        <li><a href="/JS_Ejercicios/Ejercicio_11.html">Ejercicio 11: Estructura condicional "if...else, else if y operador ternario" 3</a></li>
+        <li><a href="/JS_Ejercicios/Ejercicio_12.html">Ejercicio 12: Estructura condicional "switch" 1</a></li>
+        <li><a href="/JS_Ejercicios/Ejercicio_13.html">Ejercicio 13: Estructura condicional "switch" 2</a></li>
+        <li><a href="/JS_Ejercicios/Ejercicio_14.html">Ejercicio 14: Estructura condicional "switch" 3</a></li>
+        <li><a href="/JS_Ejercicios/Ejercicio_15.html">Ejercicio 15: Estructura bucle "while" 1</a></li>
+        <li><a href="/JS_Ejercicios/Ejercicio_16.html">Ejercicio 16: Estructura bucle "while" 2</a></li>
+        <li><a href="/JS_Ejercicios/Ejercicio_17.html">Ejercicio 17: Estructura bucle "while" 3</a></li>
+        <li><a href="/JS_Ejercicios/Ejercicio_18.html">Ejercicio 18: Estructura bucle "while" 4</a></li>
+        <li><a href="/JS_Ejercicios/Ejercicio_19.html">Ejercicio 19: Estructura bucle "while" 5</a></li>
     </nav>
+    <footer style="text-align: center;">Copyright © Todos los derechos reservados - Desarrollado por Jhonatan Galiano - 2023</footer>  
     <br>
 </div>
 <br>
@@ -58,8 +80,6 @@
 <br>
 <br>
 <div>
-    <footer style="text-align: center;">Copyright © Todos los derechos reservados - Desarrollado por Jhonatan Galiano - 2023</footer>
 </div>
-    
 </body>
 </html>
