Actualización de Login

--- a/html/pages/Login.html
+++ b/html/pages/Login.html
@@ -1,41 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="/html/css/login.css">
+    <title>New_Login</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+<body>
+    <header>
+        <h2 class="logo"></Code></h2>
+        <nav class="navigation">
+             <!-- <a href="#">Home</a>
+             <a href="#">About</a>
+             <a href="#">Service</a>
+             <a href="#">Contact</a> -->
+             <button class="btnLogin-popup">Login</button>
+        </nav>
+    </header>
 
-<body background="/html/img/pared.jpg">
-    <!-- <header>
+    <div class="wrapper">
+        <span class="icon-close">
+            <ion-icon name="close"></ion-icon>
+        </span>
 
-        <div class="logo">
-            <img src="/html/img/imagen.jpg">
+        <div class="form-box login">
+            <h2>Iniciar Sesión</h2>
+            <form action="#">
+                <div class="input-box">
+                    <span class="icon">
+                        <ion-icon name="mail"></ion-icon></ion-icon>
+                    </span>
+                    <input type="text" required>
+                    <label>Email</label>
+                </div>
+                <div class="input-box">
+                    <span class="icon">
+                        <ion-icon name="lock-closed"></ion-icon></ion-icon>
+                    </span>
+                    <input type="password" required>
+                    <label>Password</label>
+                </div>
+                <div class="remember-forgot">
+                    <label><input type="checkbox">Recordar</label>
+                    <a href="#">Olvido la contraseña?</a>
+                </div>
+                <button type="submit" class="btn" onclick="window.location.href='/html/index.html'">Login</button>
+                <div class="login-register">
+                    <p>No tienes una cuenta?<a href="#" class="register-link">Registrate</a></p>
+                </div>
+            </form>
         </div>
-
-
-    </header> -->
-
-    <div class="ancho">
-        <!-- <div class="boton"> -->
-
         
-        <div class="fondo">
-            <div class="login">
-                <h1 style="text-align: center;">Iniciar Sesión</h1>
-                <label for="username">Username:</label><br>
-                <input type="text"><br>
-                <label for="username">Password:</label><br>
-                <input type="text"><br>
-                <button onclick="window.location.href='/html/index.html'">Ingresar</button>
-            </div>
-
+        <div class="form-box register">
+            <h2>Registration</h2>
+            <form action="#">
+                <div class="input-box">
+                    <span class="icon">
+                        <ion-icon name="person"></ion-icon>
+                    </span>
+                    <input type="text" required>
+                    <label>Username</label>
+                </div>
+                <div class="input-box">
+                    <span class="icon">
+                        <ion-icon name="mail"></ion-icon></ion-icon>
+                    </span>
+                    <input type="text" required>
+                    <label>Email</label>
+                </div>
+                <div class="input-box">
+                    <span class="icon">
+                        <ion-icon name="lock-closed"></ion-icon></ion-icon>
+                    </span>
+                    <input type="password" required>
+                    <label>Password</label>
+                </div>
+                <div class="remember-forgot">
+                    <label><input type="checkbox">I agree to the terms & conditins</label>
+                </div>
+                <button type="submit" class="btn">Register</button>
+                <div class="login-register">
+                    <p>Already have account?<a href="#" class="login-link">Login</a></p>
+                </div>
+            </form>
         </div>
 
     </div>
+    <script src="script.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
-
-</html>
+</html> 
