Actulización de dirección compras

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <li><a href="/Ejercicio_19.html">Ejercicio 19: Reflejo</a></li>
         <li><a href="/Ejercicio_20.html">Ejercicio 20: Tienda de dispositivos eléctricos</a></li>
         <br>
-        <li><a href="/html/index.html">Tienda de ropa (Proyecto)</a></li>
+        <li><a href="/html/pages/Login.html">Tienda de ropa (Proyecto)</a></li>
         <br>
         <h1>Ejercicios JS y HTML: </h1>
         <li><a href="/JS_Ejercicios/Ejercicio_1.html">Ejercicio 01: Estructura condicional sencilla "if else" 1</a></li>
