Actualización de dirección

--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="ancho">
             <div class="boton">
-                <button onclick="window.location.href='/html/pages/Compras.html'">Carrito de compras</button>
+                <button onclick="window.location.href='/html/pages/compras.html'">Carrito de compras</button>
                 <button onclick="window.location.href='/html/pages/Login.html'">Login</button>
             </div> 
             <nav>
@@ -65,8 +65,11 @@
         </article>
     </main>
 
-    <a href="/index.html" class="back">Regresar a página principal</a><br><br>
-
+    <div class="regresar">
+        <a href="/index.html" class="back">Regresar a página principal</a>
+    </div>
+    <br>
+    
     <footer style="text-align: center;">Copyright © Todos los derechos reservados - Desarrollado por Jhonatan Galiano - 2023</footer>
 </body>
 </html>
