Actualización para sub. funciones
se agrega una actualizacion para incluir los archivos nuevos de las carpetas funciones

--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
         <li><a href="/JS_Ejercicios/Ejercicio_17.html">Ejercicio 17: Estructura bucle "while" 3</a></li>
         <li><a href="/JS_Ejercicios/Ejercicio_18.html">Ejercicio 18: Estructura bucle "while" 4</a></li>
         <li><a href="/JS_Ejercicios/Ejercicio_19.html">Ejercicio 19: Estructura bucle "while" 5</a></li>
+        <br>
+        <h1>Ejercicios JS y Funciones: </h1>
+        <li><a href="/JS_Ejercicios/Funciones/EJercicio_1.html">Ejercicio 01: Funciones</a></li>
+        <li><a href="/JS_Ejercicios/Funciones/Ejercicio_2.html">Ejercicio 02: Funciones</a></li>
+        <li><a href="/JS_Ejercicios/Funciones/Ejercicio_3.html">Ejercicio 03: Funciones</a></li>
+        <li><a href="/JS_Ejercicios/Funciones/Ejercicio_4.html">Ejercicio 04: Funciones</a></li>
+        <li><a href="/JS_Ejercicios/Funciones/Ejercicio_5.html">Ejercicio 05: Funciones</a></li>
     </nav>
     <footer style="text-align: center;">Copyright © Todos los derechos reservados - Desarrollado por Jhonatan Galiano - 2023</footer>  
     <br>
