Actualización de estilos

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
 <div class="elementos">
     <nav>
-        <h1>Ejercicios HTML y CSS: </h1>
+        <h1 style="color: lawngreen;">Ejercicios HTML y CSS: </h1>
         <li><a href="/Ejercicio_1.html">Ejercicio 01: Maquetación General</a></li>
         <li><a href="/Ejercicio_2.html">Ejercicio 02: Diseños Maquetaciones</a></li>
         <li><a href="/Ejercicio_3.html">Ejercicio 03: Selectores</a></li>
@@ -50,7 +50,7 @@
         <br>
         <li><a href="/html/pages/Login.html">Tienda de ropa (Proyecto)</a></li>
         <br>
-        <h1>Ejercicios JS y HTML: </h1>
+        <h1 style="color: darkorange;">Ejercicios JS, CSS y HTML: </h1>
         <li><a href="/JS_Ejercicios/Ejercicio_1.html">Ejercicio 01: Estructura condicional sencilla "if else" 1</a></li>
         <li><a href="/JS_Ejercicios/Ejercicio_2.html">Ejercicio 02: Estructura condicional sencilla "if else" 2</a></li>
         <li><a href="/JS_Ejercicios/Ejercicio_3.html">Ejercicio 03: Estructura condicional sencilla "if else" 3</a></li>
@@ -71,12 +71,22 @@
         <li><a href="/JS_Ejercicios/Ejercicio_18.html">Ejercicio 18: Estructura bucle "while" 4</a></li>
         <li><a href="/JS_Ejercicios/Ejercicio_19.html">Ejercicio 19: Estructura bucle "while" 5</a></li>
         <br>
-        <h1>Ejercicios JS y Funciones: </h1>
+        <h1 style="color: deeppink;">Ejercicios JS, HTML y Funciones: </h1>
         <li><a href="/JS_Ejercicios/Funciones/EJercicio_1.html">Ejercicio 01: Funciones</a></li>
         <li><a href="/JS_Ejercicios/Funciones/Ejercicio_2.html">Ejercicio 02: Funciones</a></li>
         <li><a href="/JS_Ejercicios/Funciones/Ejercicio_3.html">Ejercicio 03: Funciones</a></li>
         <li><a href="/JS_Ejercicios/Funciones/Ejercicio_4.html">Ejercicio 04: Funciones</a></li>
         <li><a href="/JS_Ejercicios/Funciones/Ejercicio_5.html">Ejercicio 05: Funciones</a></li>
+        <br>
+        <h1 style="color: rgb(181, 102, 255);">Ejercicios JS, HTML, CSS y Eventos:</h1>
+        <li><a href="/Eventos_JS/Ejercicio_1.html">Ejercicio 01: Evento Onclick() con DOM HTML y addEventListener</a></li>
+        <li><a href="/Eventos_JS/Ejercicio_2.html">Ejercicio 02: Evento Onfocus() con DOM HTML y addEventListener</a></li>
+        <li><a href="/Eventos_JS/Ejercicio_3.html">Ejercicio 03: Evento Onkeydown() con DOM HTML y addEventListener</a></li>
+        <li><a href="/Eventos_JS/Ejercicio_4.html">Ejercicio 04: Evento Onmousedown() y Onmouseup con DOM HTML y addEventListener</a></li>
+        <li><a href="/Eventos_JS/Ejercicio_5.html">Ejercicio 05: Evento select() con DOM HTML y addEventListener</a></li>
+        <li><a href="/Eventos_JS/Ejercicio_6.html">Ejercicio 06: Evento Onsubmit() con DOM HTML y addEventListener</a></li>
+        <br>
+        <li><a href="">Calculadora (Proyecto)</a></li>
     </nav>
     <footer style="text-align: center;">Copyright © Todos los derechos reservados - Desarrollado por Jhonatan Galiano - 2023</footer>  
     <br>
