--- a/html/pages/Login.html
+++ b/html/pages/Login.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="remember-forgot">
                     <label><input type="checkbox">Recordar</label>
-                    <a href="#">Olvido la contraseña?</a>
+                    <a href="/index.html">Olvido la contraseña?</a>
                 </div>
                 <button type="submit" class="btn" onclick="window.location.href='/html/index.html'">Login</button>
                 <div class="login-register">
