Se actualizan directorio
Se incluye calculadora en el repositorio principal

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <li><a href="/Eventos_JS/Ejercicio_5.html">Ejercicio 05: Evento select() con DOM HTML y addEventListener</a></li>
         <li><a href="/Eventos_JS/Ejercicio_6.html">Ejercicio 06: Evento Onsubmit() con DOM HTML y addEventListener</a></li>
         <br>
-        <li><a href="">Calculadora (Proyecto)</a></li>
+        <li><a href="/Eventos_JS/Caluculadora.html">Calculadora (Proyecto)</a></li>
     </nav>
     <footer style="text-align: center;">Copyright © Todos los derechos reservados - Desarrollado por Jhonatan Galiano - 2023</footer>  
     <br>
