--- a/Eventos_JS/Ejercicio_1.html
+++ b/Eventos_JS/Ejercicio_1.html
@@ -13,6 +13,17 @@
             color: rgb(255, 255, 255);
             font-size: 25px;
         }
+        .regresar{
+            /* margin-top: 30%; */
+            text-align: center;
+            font-size: 25px;}
+        .back{
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            text-decoration: none;
+            color: rgb(15, 221, 152);}
+        .back:hover{
+            text-decoration: underline;
+        }
     </style>
 </head>
 
@@ -22,6 +33,12 @@
 </body>
   
 <p id="btnColocarImagen" onclick="colocarImagen()">Haz clic aquí para ver la imagen</p>
-<div id="observarImg" style="margin-left: 45%;"></div>
+<div id="observarImg" style="text-align: center;"></div>
+
+<body>
+    <div class="regresar">
+        <a href="/index.html" class="back">Regresar a página principal</a>
+    </div>    
+</body>
 
 </html>
