--- a/Eventos_JS/Ejercicio_3.html
+++ b/Eventos_JS/Ejercicio_3.html
@@ -22,6 +22,17 @@
             font-size: 35px;
             color: grey;
         }
+        .regresar{
+            margin-top: 25%;
+            text-align: center;
+            font-size: 25px;}
+        .back{
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            text-decoration: none;
+            color: rgb(15, 221, 152);}
+        .back:hover{
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
@@ -32,5 +43,12 @@
 <BR></BR>
 
     Escribe algo en la caja de texto: <input type="text" id="miInput">
+
+
+    <body>
+        <div class="regresar">
+            <a href="/index.html" class="back">Regresar a página principal</a>
+        </div>    
+    </body>
 
 </html>
