--- a/Eventos_JS/Ejercicio_4.html
+++ b/Eventos_JS/Ejercicio_4.html
@@ -11,6 +11,17 @@
             color: white;
             font-size: 25px;
         }
+        .regresar{
+            margin-top: 30%;
+            text-align: center;
+            font-size: 25px;}
+        .back{
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            text-decoration: none;
+            color: rgb(15, 221, 152);}
+        .back:hover{
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
@@ -20,5 +31,11 @@
 
     <br><br>
     Presione y suelte la caja de texto: <input type="text" id="miInput">
+
+    <body>
+        <div class="regresar">
+            <a href="/index.html" class="back">Regresar a página principal</a>
+        </div>    
+    </body>
 
 </html>
