--- a/Eventos_JS/Ejercicio_5.html
+++ b/Eventos_JS/Ejercicio_5.html
@@ -15,6 +15,17 @@
             background-color: skyblue;
             color: black;
         }
+        .regresar{
+            margin-top: 30%;
+            text-align: center;
+            font-size: 25px;}
+        .back{
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            text-decoration: none;
+            color: rgb(15, 221, 152);}
+        .back:hover{
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
@@ -26,4 +37,11 @@
     Seleccione algún texto: <input type="text" value="JavaScript" id="myInput">
     <br><br>
     <p id="demo" style="margin-left: 40%;"></p>
+
+
+    <body>
+        <div class="regresar">
+            <a href="/index.html" class="back">Regresar a página principal</a>
+        </div>    
+    </body>
 </html>
