--- a/Eventos_JS/Ejercicio_6.html
+++ b/Eventos_JS/Ejercicio_6.html
@@ -15,6 +15,17 @@
             background-color: purple;
             border-radius: 5px;
         }
+        .regresar{
+            margin-top: 35%;
+            text-align: center;
+            font-size: 25px;}
+        .back{
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            text-decoration: none;
+            color: rgb(15, 221, 152);}
+        .back:hover{
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
@@ -26,5 +37,11 @@
         Ingrese su nombre: <input type="text" name="fname">
         <input type="submit" value="Enviar">
     </form>
+
+    <body>
+        <div class="regresar">
+            <a href="/index.html" class="back">Regresar a página principal</a>
+        </div>    
+    </body>
 
 </html>
