--- a/Eventos_JS/Ejercicio_2.html
+++ b/Eventos_JS/Ejercicio_2.html
@@ -19,6 +19,17 @@
             width: 200px;
             font-size: 35px;
         }
+        .regresar{
+            margin-top: 30%;
+            text-align: center;
+            font-size: 25px;}
+        .back{
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            text-decoration: none;
+            color: rgb(15, 221, 152);}
+        .back:hover{
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
@@ -28,4 +39,9 @@
     <p>Cree el foco en la caja de texto: </p>
     <input type="text" id="evento_n" onfocus="myfunction()">
 
+    <body>
+        <div class="regresar">
+            <a href="/index.html" class="back">Regresar a página principal</a>
+        </div>    
+    </body>
 </html>
