Actualización de rutas

--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
         <li><a href="/JS_Ejercicios/Ejercicio_17.html">Ejercicio 17: Estructura bucle "while" 3</a></li>
         <li><a href="/JS_Ejercicios/Ejercicio_18.html">Ejercicio 18: Estructura bucle "while" 4</a></li>
         <li><a href="/JS_Ejercicios/Ejercicio_19.html">Ejercicio 19: Estructura bucle "while" 5</a></li>
+        <li><a href="/JS_Ejercicios/Ejercicio_20.html">Ejercicio 20: Estructura bucle "for" 1</a></li>
+        <li><a href="/JS_Ejercicios/Ejercicio_21.html">Ejercicio 21: Estructura bucle "for" 2</a></li>
+        <li><a href="/JS_Ejercicios/Ejercicio_22.html">Ejercicio 22: Estructura bucle "for" 3</a></li>
+        <li><a href="/JS_Ejercicios/Ejercicio_23.html">Ejercicio 23: Estructura bucle "Do While" 1</a></li>
         <br>
         <h1 style="color: deeppink;">Ejercicios JS, HTML y Funciones: </h1>
         <li><a href="/JS_Ejercicios/Funciones/EJercicio_1.html">Ejercicio 01: Funciones</a></li>
