--- a/index.html
+++ b/index.html
@@ -90,7 +90,10 @@
         <li><a href="/Eventos_JS/Ejercicio_5.html">Ejercicio 05: Evento select() con DOM HTML y addEventListener</a></li>
         <li><a href="/Eventos_JS/Ejercicio_6.html">Ejercicio 06: Evento Onsubmit() con DOM HTML y addEventListener</a></li>
         <br>
-        <li><a href="/Eventos_JS/Caluculadora.html">Calculadora (Proyecto)</a></li>
+        <li><a href="/Eventos_JS/Caluculadora.html">Calculadora: Eventos JavaScript</a></li>
+        <li><a href="/Eventos_JS/Reloj.html">Reloj: Eventos JavaScript</a></li>
+        <li><a href="/Eventos_JS/Fecha.html">Fecha: Eventos JavaScript</a></li>
+        <li><a href="/Eventos_JS/Calendario.html">Calendario: Eventos JavaScript</a></li>
     </nav>
     <footer style="text-align: center;">Copyright © Todos los derechos reservados - Desarrollado por Jhonatan Galiano - 2023</footer>  
     <br>
