--- a/Contenido/index.html
+++ b/Contenido/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/Contenido/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -47,18 +47,18 @@
         <nav class="container">
             <h1 style="color: #0fbab7;">OFERTAS</h1>
             <div class="section_1">
-                <img src="/Media/faro.jpg" alt="">
+                <img src="/Contenido/Media/faro.jpg" alt="">
                 <br><br>
                 <span style="margin-left: 15px; margin-left: 15px;">Cuando en la oscuridad el faro se encuentra en funcionamiento, la lámpara emite haces de luz a través de las lentes, que giran en 360 grados. En los aéreos hay dos lámparas de diferente color, una gira (aumentando de brillo) y la otra solo destella cuando la que gira pasa por el norte.</span>
             </div>
             <div class="section_2">
-                <img src="/Media/taladro.jpg" alt="">
+                <img src="/Contenido/Media/taladro.jpg" alt="">
                 <br><br>
                 <span></span>
                 <span style="margin-left: 15px; margin-left: 15px;">El juego de taladros inalámbricos TE-CD 18/40 Li +69 es miembro de la familia PXC significa que todas las baterías de la serie del sistema se pueden usar con el taladro. La potencia se transfiere a una unidad de engranajes de 2 velocidades y el control de velocidad electrónico garantiza que la herramienta aún se pueda ajustar al material y la aplicación en particular</span>
             </div>
             <div class="section_3">
-                <img src="/Media/cable.jpg" alt="">
+                <img src="/Contenido/Media/cable.jpg" alt="">
                 <br>
                 <br>
                 <span style="margin-left: 15px; margin-left: 15px;">Ha sido concebido para máxima velocidad en aplicaciones de transmisión de datos. Elaborado conforme a los más altos estándares de transmisión de datos de redes LAN, la configuración de sus pares trenzados garantizan su óptimo desempeño, cumple además con las normas eléctricas y de telecomunicaciones pertinentes a nivel mundial</span>
