--- a/Contenido/index.html
+++ b/Contenido/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
             <a class="enlace" href="index.html">
-                <img class="logo" src="/Media/1.png" alt="" style="height: 100px; margin-top: 23px; margin-left: 20px;";>
+                <img class="logo" src="/Contenido/Media/1.png" alt="" style="height: 100px; margin-top: 23px; margin-left: 20px;";>
             </a>
             <ul>
                 <li class="li-inicio">
