Actulización de archivos responsive

--- a/Responsive/index.html
+++ b/Responsive/index.html
@@ -17,7 +17,7 @@
             <div class="header_i">
                 <div class="header_1">
                     <a class="enlace" href="index.html">
-                        <img class="logo" src="/Responsive/Media/1.png" alt="" style="height: 100px; margin-top: 23px; margin-left: 20px;";>
+                        <img class="logo" src="/Responsive/Media/1.png" alt="" style="height: 80px; margin-top: 23px; margin-left: 20px;";>
                     </a>
                 </div>
 
@@ -41,10 +41,12 @@
                 
                 <div class="header_3">
                     <li class="li_botones">
-                    <button class="compra" type="button" style="width: 150px;">Login</button>
-                    <ion-icon name="person-outline" class="icon"></ion-icon> 
-                    <button class="login" type="button" style="width: 150px;">Carrito</button>
-                    <ion-icon name="cart-outline" class="icon"></ion-icon>
+                    <button class="login" type="button">
+                        <ion-icon name="person-outline" class="icon"></ion-icon> 
+                    </button>
+                    <button class="login" type="button">
+                        <ion-icon name="cart-outline" class="icon"></ion-icon>
+                    </button>
                 </li> 
                 </div>
 
@@ -57,7 +59,7 @@
             </label>
         </nav>
 
-        <img src="/Responsive/Media/banner2.jpg" alt="" class="imagen_banner">
+        <img src="/Media/banner2.jpg" alt="" class="imagen_banner">
         <BR></BR><br>
         <nav class="container">
             <h1 style="color: #0fbab7;">OFERTAS</h1>
@@ -111,7 +113,7 @@
             </div>
             <div class="tutorial_2">
                 <div class="video_t">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/lLkQ4w2qfTg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> 
+                    <iframe src="https://www.youtube.com/embed/lLkQ4w2qfTg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> 
                 </div>
             </div>
         </nav>
