--- a/Responsive/pages/Compras.html
+++ b/Responsive/pages/Compras.html
@@ -8,11 +8,12 @@
     <title>Grid-Layout</title>
 </head>
 <body>
-    <!-- <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, quasi reiciendis repudiandae alias reprehenderit quia unde praesentium autem quidem, ducimus dolore ullam cupiditate porro nam vel illo. Necessitatibus, porro doloribus.</h1> -->
-
+    
     <div class="grid-layout">
         <div class="caja c1">
-            <img src="/Responsive/Media/1.png" alt="" class="logo">
+            <a href="/Responsive/index.html">
+                <img src="/Responsive/Media/1.png" alt="" class="logo" >
+            </a>
         </div>
         <div class="caja c2">
             <ul class="nav-menu">
@@ -38,9 +39,9 @@
                 <button class="interacción">
                     <ion-icon name="cart-outline" class="icon"></ion-icon>
                 </button>
-            </div>
-            
+            </div>        
         </div>
+
         <div class="caja c5">
             <img src="/Responsive/Media/banner_2.jpg" alt="" style="margin-top: 3%;">
         </div>
