--- a/Responsive/pages/Compras.html
+++ b/Responsive/pages/Compras.html
@@ -36,7 +36,7 @@
                 <button class="interacción">
                     <ion-icon name="person-outline" class="icon"></ion-icon> 
                 </button>
-                <button class="interacción">
+                <button class="interacción" onclick="window.location.href='/Responsive/pages/Carrito.html'">
                     <ion-icon name="cart-outline" class="icon"></ion-icon>
                 </button>
             </div>        
