--- a/Sitio_Restaurante_Las_Delicias/index.html
+++ b/Sitio_Restaurante_Las_Delicias/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/pedidos.css">
+    <link rel="stylesheet" href="/Sitio_Restaurante_Las_Delicias/css/pedidos.css">
     <title>Restaurante Las Delicias</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
             RESTAURANTE
             </section>
             <section class="section_1">
-    
+                <img src="/Sitio_Restaurante_Las_Delicias/media/logo1.png" alt="">
             </section>
             <section class="section_1">
                LAS DELICIAS
@@ -41,10 +41,15 @@
         </section>
         <section class="bloque_central">
             <section class="contenedorProdcutos"></section>
-            <section class="carritoCompras"></section>
+            <section class="contenedorVerCarrito">
+                <section id="cabezera-carrito"></section>
+                <section id="contador-carrito" style="color: transparent;"></section>
+                <section id="ver-carrito" style="padding-bottom: 50;"></section><BR></BR>
+                <section id="precio-total-carrito"></section>
+            </section>
         </section>
     </section>
-    <script src="/js/script_function.js"></script>
+    <script src="/Sitio_Restaurante_Las_Delicias/js/script_function.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
